@@ -4,6 +4,9 @@
 	of feature: a function to lowercase strings was added. Add functions
 	if an identifier is a valid node, name or resource.
 
+	* src/stringprep.erl: `stringprep' is now a simple frontend to
+	`exmpp_stringprep'.
+
 2007-02-19  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>
 
 	* src/exmpp_jid.erl: Reworked JID parsing to handle more error cases.
